loopfor.LoopCourseForest.scala.error
Compilation error:
LoopCourseForest:-51: error: Unmatched closing brace '}' ignored here
	}
        ^LoopCourseForest:-50: error: illegal start of statement (no modifiers allowed here)
	override def backward(i: Int) {
        ^LoopCourseForest:-45: error: illegal start of statement (no modifiers allowed here)
	override def backward() {
        ^LoopCourseForest:-28: error: illegal start of statement (no modifiers allowed here)
	override def forward()  {
        ^LoopCourseForest:0: error: illegal start of statement (no modifiers allowed here)
	override def run() {
        ^